--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,3 +1,5 @@
+$primaryColor: #0C7CEB;
+
 body {
     font-family: 'Fira Sans Condensed', sans-serif;
 }
@@ -5,4 +7,5 @@ body {
 li {
     font-family: "Open Sans", sans-serif;
 }
+
 
